[cleanup] Remove RDMA references

--- a/kreon_lib/CMakeLists.txt
+++ b/kreon_lib/CMakeLists.txt
@@ -12,7 +12,7 @@ if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
   set(CMAKE_C_FLAGS_DEBUG "-ggdb3 -Og ${CMAKE_C_FLAGS_DEBUG}")
 endif()
 
-if(CMAKE_BUILD_TYPE EQUAL "Release")
+if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
   set(CMAKE_C_FLAGS_RELEASE
       "-flto -fwhopr -funit-at-a-time -fprefetch-loop-arrays -fpeel-loops -O2 -finline-functions -DNDEBUG ${CMAKE_C_FLAGS_RELEASE}"
   ) # -Werror
@@ -32,46 +32,6 @@ set_source_files_properties(
                                   "${CMAKE_C_FLAGS_RELEASE} ${CMAKE_C_FLAGS}")
 set(CMAKE_EXE_LINKER_FLAGS "-Wl,--no-as-needed -lrt -lm -pthread -lnuma")
 
-# Kreon with replication enabled
-add_library(
-  kreonr STATIC
-  allocator/recovery.c
-  allocator/allocator.c
-  allocator/persistent_operations.c
-  btree/segment_allocator.c
-  btree/btree.c
-  btree/compaction_daemon.c
-  btree/static_leaf.c
-  btree/dynamic_leaf.c
-  btree/delete.c
-  btree/gc.c
-  scanner/stack.c
-  scanner/scanner.c
-  scanner/min_max_heap.c
-  ../utilities/spin_loop.c
-  ../utilities/list.c)
-
-add_library(
-  kreonr-shared SHARED
-  allocator/recovery.c
-  allocator/allocator.c
-  allocator/persistent_operations.c
-  btree/segment_allocator.c
-  btree/btree.c
-  btree/compaction_daemon.c
-  btree/static_leaf.c
-  btree/dynamic_leaf.c
-  btree/delete.c
-  btree/gc.c
-  scanner/stack.c
-  scanner/min_max_heap.c
-  scanner/scanner.c
-  ../utilities/spin_loop.c
-  ../utilities/list.c)
-
-set_target_properties(kreonr PROPERTIES COMPILE_DEFINITIONS "KREONR")
-
-# Kreon with replication disabled
 add_library(${KREON_LIB} STATIC ${KREON_C_SOURCE_FILES})
 add_library(${KREON_LIB_SHARED} SHARED ${KREON_C_SOURCE_FILES})
 
@@ -80,9 +40,6 @@ set_property(TARGET ${KREON_LIB_SHARED} PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 target_link_libraries(${KREON_LIB} log mba)
 target_link_libraries(${KREON_LIB_SHARED} log-shared mba-shared)
-
-target_link_libraries(kreonr log mba)
-target_link_libraries(kreonr-shared log-shared mba-shared)
 
 set_source_files_properties(allocator/spin_loop.c PROPERTIES COMPILE_FLAGS
                                                              "-O0")
@@ -100,11 +57,10 @@ target_link_libraries(mkfs.kreon log)
 
 if(KREON_BUILD_CPACK)
   install(
-    TARGETS ${KREON_LIB} ${KREON_LIB_SHARED} mkfs.kreon kreonr-shared
+    TARGETS ${KREON_LIB} ${KREON_LIB_SHARED} mkfs.kreon
     ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
     LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
     RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
   set_target_properties(${KREON_LIB} PROPERTIES OUTPUT_NAME kreon)
   set_target_properties(${KREON_LIB_SHARED} PROPERTIES OUTPUT_NAME kreon)
-  set_target_properties(kreonr-shared PROPERTIES OUTPUT_NAME kreonr)
 endif()
