[cleanup] Generalize cmake variables
* Removes references to Kreon and generalizes lib name by using the
project name
* Removes RDMA leftovers
* Build shared/static library using cmake instead of defining custom
targets
* Simplifies tests cmake

--- a/YCSB-CXX/CMakeLists.txt
+++ b/YCSB-CXX/CMakeLists.txt
@@ -1,9 +1,9 @@
 # File: YCSB-CXX/CMakeLists.txt Author: Michalis Vardoulakis
 # <mvard@ics.forth.gr>
 
-include_directories(BEFORE core db ../kreon)
+include_directories(BEFORE core db ../lib)
 
 add_executable(ycsb-edb db/db_factory_eutropiadb.cc core/core_workload.cc
                         driver/ycsbc.cc ../utilities/list.c)
-target_link_libraries(ycsb-edb kreon)
+target_link_libraries(ycsb-edb ${PROJECT_NAME})
 set_target_properties(ycsb-edb PROPERTIES LINK_FLAGS "-pthread -lnuma")
