--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,11 @@
 
 include(cmake_utils/PreventInSouceBuilds.cmake.in)
 cmake_minimum_required(VERSION 3.11.0)
-include(FetchContent)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-project(kreon VERSION 1.0)
+project(parallax VERSION 1.0)
+option(BUILD_SHARED_LIBS
+       "Build shared libraries (.dll/.so) instead of static ones (.lib/.a)" OFF)
 
 # Set a default build type if none was specified
 set(default_build_type "Release")
@@ -25,9 +26,13 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
                                                "MinSizeRel" "RelWithDebInfo")
 endif()
 
+include(FetchContent)
+include(CPack)
 include(GNUInstallDirs)
 include(cmake_utils/mkfs.cmake.in)
 include(cmake_utils/ycsb.cmake.in)
+include(cmake_utils/cmakeconfig.cmake.in)
+configure_file(config.h.in config.h @ONLY)
 
 FetchContent_Declare(log # Recommendation: Stick close to the original name.
                      GIT_REPOSITORY https://github.com/innerout/log.c.git)
@@ -52,10 +57,6 @@ if(NOT log_POPULATED)
   FetchContent_MakeAvailable(log)
 endif()
 
-# Paths set(ZK_C_LIB "/home1/public/mvard/zookeeper_c")
-include(cmake_utils/cmakeconfig.cmake.in)
-configure_file(config.h.in config.h @ONLY)
-
 # Compiler configuration
 if(NOT CMAKE_C_COMPILER)
   set(CMAKE_C_COMPILER "gcc")
@@ -66,47 +67,39 @@ if(NOT CMAKE_CXX_COMPILER)
 endif()
 
 include_directories(${CMAKE_BINARY_DIR})
-set(CMAKE_C_FLAGS_RELEASE "-std=gnu99 -Wall")
+set(CMAKE_C_FLAGS_RELEASE "-std=gnu11 -Wall")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_RELEASE} -g ")
 set(CMAKE_CXX_FLAGS_RELEASE "-std=gnu++11 -Wall")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_RELEASE} -g")
 
-add_subdirectory(kreon_lib)
+add_subdirectory(lib)
 add_subdirectory(YCSB-CXX)
 add_subdirectory(utilities)
 add_subdirectory(tests)
 
-if(KREON_BUILD_CPACK
-   AND Zookeeper_INCLUDE_DIR
-   AND Zookeeper_LIBRARY)
-  set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
-  set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
-  set(CPACK_PACKAGE_RELEASE 1)
-  set(CPACK_PACKAGE_VENDOR "FORTH-ICS")
-  set(CPACK_PACKAGE_DESCRIPTION_SUMMARY
-      "RDMA-based distributed key-value store")
-  set(CPACK_GENERATOR "RPM")
-  set(CPACK_RPM_PACKAGE_LICENSE "ASL v2.0")
-  set(CPACK_RPM_PACKAGE_GROUP "Applications/Databases")
-  set(CPACK_RPM_PACKAGE_REQUIRES
-      "numactl-libs >= 2, libibverbs, librdmacm, glibc, libgcc, libnl3, zookeeper-native >= 3"
-  )
-  set(CPACK_RPM_PACKAGE_DESCRIPTION
-      "Kreon is a high-speed and high-efficiency distributed key-value store functioning on top of an RDMA-capable network."
-  )
-  set(CPACK_PACKAGING_INSTALL_PREFIX /usr)
-  set(CPACK_PACKAGE_FILE_NAME
-      "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}"
-  )
-  include(CPack)
-  if(NOT TARGET uninstall)
-    configure_file(
-      "${CMAKE_CURRENT_SOURCE_DIR}/cmake_utils/cmake_uninstall.cmake.in"
-      "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" IMMEDIATE @ONLY)
+set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
+set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
+set(CPACK_PACKAGE_RELEASE 1)
+set(CPACK_PACKAGE_VENDOR "FORTH-ICS")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY
+    "${PROJECT_NAME} is a high-speed and high-efficiency key-value store.")
+set(CPACK_GENERATOR "RPM")
+set(CPACK_RPM_PACKAGE_LICENSE "ASL v2.0")
+set(CPACK_RPM_PACKAGE_GROUP "Applications/Databases")
+set(CPACK_RPM_PACKAGE_REQUIRES "numactl-libs >= 2")
+set(CPACK_RPM_PACKAGE_DESCRIPTION
+    "${PROJECT_NAME} is a high-speed and high-efficiency key-value store.")
+set(CPACK_PACKAGING_INSTALL_PREFIX /usr)
+set(CPACK_PACKAGE_FILE_NAME
+    "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}"
+)
 
-    add_custom_target(
-      uninstall COMMAND ${CMAKE_COMMAND} -P
-                        ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
-  endif()
+if(NOT TARGET uninstall)
+  configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake_utils/cmake_uninstall.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" IMMEDIATE @ONLY)
 
+  add_custom_target(
+    uninstall COMMAND ${CMAKE_COMMAND} -P
+                      ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
 endif()
