--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -37,11 +37,13 @@ list(APPEND LIB_C_SOURCE_FILES "${CMAKE_SOURCE_DIR}/utilities/list.c")
 set_source_files_properties(
   LIB_C_SOURCE_FILES PROPERTIES COMPILE_FLAGS
                                 "${CMAKE_C_FLAGS_RELEASE} ${CMAKE_C_FLAGS}")
-set(CMAKE_EXE_LINKER_FLAGS "-Wl,--no-as-needed -lrt -lm -pthread -lnuma")
+set(CMAKE_EXE_LINKER_FLAGS
+    "${CMAKE_EXE_LINKER_FLAGS} -Wl,--no-as-needed -lrt -lm -pthread -lnuma -lutil"
+)
 
 add_library(${LIB} ${LIB_C_SOURCE_FILES})
 set_property(TARGET ${LIB} PROPERTY POSITION_INDEPENDENT_CODE ON)
-target_link_libraries(${LIB} PRIVATE log mba)
+target_link_libraries(${LIB} PRIVATE ${DEPENDENCIES})
 
 set_source_files_properties(allocator/spin_loop.c PROPERTIES COMPILE_FLAGS
                                                              "-O0")
