--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,11 +1,12 @@
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 set(LIB "${PROJECT_NAME}")
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
   set(CMAKE_C_FLAGS
       "-Wstrict-prototypes -Wall -Wextra -std=gnu11 -fPIC ${CMAKE_C_FLAGS}"
   )# -Werror
   set(CMAKE_C_FLAGS_DEBUG "-ggdb3 -Og ${CMAKE_C_FLAGS_DEBUG}")
+
 endif()
 
 if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
@@ -60,3 +61,10 @@ install(
   LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
   RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
 set_target_properties(${LIB} PROPERTIES OUTPUT_NAME ${LIB})
+
+find_program(iwyu_path NAMES include-what-you-use iwyu iwyu-tool)
+if(iwyu_path)
+  set_property(TARGET ${LIB} PROPERTY C_INCLUDE_WHAT_YOU_USE ${iwyu_path})
+else()
+  message("Could not find the program include-what-you-use")
+endif()
