[refactor] Rename YCSB eutropia_db to parallax_db

--- a/YCSB-CXX/CMakeLists.txt
+++ b/YCSB-CXX/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories(BEFORE core db ../lib)
 
-add_executable(ycsb-edb db/db_factory_eutropiadb.cc core/core_workload.cc
+add_executable(ycsb-edb db/db_factory_parallax.cc core/core_workload.cc
                         driver/ycsbc.cc ../utilities/list.c)
 target_link_libraries(ycsb-edb ${PROJECT_NAME} ${DEPENDENCIES})
