--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -19,10 +19,13 @@ set(LIB_C_SOURCE_FILES
 list(APPEND LIB_C_SOURCE_FILES "${CMAKE_SOURCE_DIR}/utilities/spin_loop.c")
 list(APPEND LIB_C_SOURCE_FILES "${CMAKE_SOURCE_DIR}/utilities/list.c")
 
-set_source_files_properties(
-  LIB_C_SOURCE_FILES PROPERTIES COMPILE_FLAGS
-                                "${CMAKE_C_FLAGS_RELEASE} ${CMAKE_C_FLAGS}")
-
+if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
+  set_source_files_properties(LIB_C_SOURCE_FILES PROPERTIES COMPILE_FLAGS
+                                                            "${CMAKE_C_FLAGS}")
+else()
+  set_source_files_properties(
+    LIB_C_SOURCE_FILES PROPERTIES COMPILE_FLAGS "${CMAKE_C_FLAGS_RELEASE}")
+endif()
 add_library(${LIB} ${LIB_C_SOURCE_FILES})
 set_property(TARGET ${LIB} PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_link_libraries(${LIB} PRIVATE ${DEPENDENCIES})
@@ -48,7 +51,9 @@ install(
   RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")
 set_target_properties(${LIB} PROPERTIES OUTPUT_NAME ${LIB})
 
-# find_program(iwyu_path NAMES include-what-you-use iwyu iwyu-tool)
-# if(iwyu_path) set_property(TARGET ${LIB} PROPERTY C_INCLUDE_WHAT_YOU_USE
-# ${iwyu_path}) else() message("Could not find the program
-# include-what-you-use") endif()
+find_program(iwyu_path NAMES include-what-you-use iwyu iwyu-tool)
+if(iwyu_path)
+  set_property(TARGET ${LIB} PROPERTY C_INCLUDE_WHAT_YOU_USE ${iwyu_path})
+else()
+  message("Could not find the program include-what-you-use")
+endif()
