--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: carvicsforth/arch_carv:latest
 
 stages:
   - build
+  - test
   - deploy
 
 build_gcc:
@@ -24,6 +25,16 @@ build_clang-tidy:
     - mkdir -p build;cd build
     - cmake .. "-DCMAKE_C_CLANG_TIDY=/bin/clang-tidy;-checks=*,-clang-analyzer-*,-google-*,-hicpp-braces-around-statements,-bugprone-not-null-terminated-result,-readability-braces-around-statements,-readability-braces-around-statements* --format-style=../.clang-format -p ./compile_commands.json"
     - make all
+
+test_surrogates:
+  image: carvicsforth/ubuntu_carv:latest
+  stage: test
+  script:
+    - mkdir -p build;cd build
+    - cmake ..
+    - make SurrogateTUsTest;cd tests/Surrogates;
+    - ./SurrogateTUsTest
+
 
 install_lib:
   image: carvicsforth/ubuntu_carv:latest
