[feat][refactor] Replace config.h with options.yml
* Remove dead defines from conf.h
* Replace conf.h options with options.yml to avoid recompiling for
different configurations
* Fix linking with library to avoid linking dependencies with targets
* Remove obsolete conf.py

--- a/tests/Surrogates/CMakeLists.txt
+++ b/tests/Surrogates/CMakeLists.txt
@@ -10,5 +10,5 @@ set(SURROGATE_TEST_SOURCES
     main.c)
 
 add_executable(SurrogateTUsTest ${SURROGATE_TEST_SOURCES})
-target_link_libraries(SurrogateTUsTest PRIVATE "${PROJECT_NAME}")
+target_link_libraries(SurrogateTUsTest "${PROJECT_NAME}")
 add_test(NAME SurrogateTUsTest COMMAND $<TARGET_FILE:SurrogateTUsTest>)
