--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 repos:
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.3.0
+    rev: v3.4.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
@@ -27,6 +27,7 @@ repos:
     rev: 2.1.4
     hooks:
     - id: shellcheck
+      additional_dependencies: []
     - id: shfmt
 
 -   repo: https://github.com/psf/black
@@ -45,7 +46,7 @@ repos:
         additional_dependencies: ['pyright@1.1.80']
 
 -   repo: https://github.com/jorisroovers/gitlint
-    rev: v0.14.0
+    rev: v0.15.0
     hooks:
     -   id: gitlint
         stages: [commit-msg]
