--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(${CMAKE_SOURCE_DIR}/lib)
 
 set(LIB_TEST_FILES test_deletes test_recovery.c test_scans.c test_dirty_scans.c
-                   test_options.c)
+                   test_options.c test_sanitizers.c)
 
 set_source_files_properties(${LIB_TEST_FILES} COMPILE_FLAGS "-O3")
 
@@ -26,5 +26,9 @@ target_link_libraries(test_spills "${PROJECT_NAME}" ${DEPENDENCIES})
 add_executable(test_options test_options.c)
 target_link_libraries(test_options "${PROJECT_NAME}" ${DEPENDENCIES})
 add_test(NAME test_options COMMAND $<TARGET_FILE:test_options>)
+
+set_source_files_properties(test_sanitizers.c COMPILE_FLAGS "-O0")
+add_executable(test_sanitizers test_sanitizers.c)
+add_test(NAME test_sanitizers COMMAND $<TARGET_FILE:test_sanitizers>)
 
 add_subdirectory(Surrogates)
