--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,12 @@ build_clang-tidy:
     - cmake .. "-DCMAKE_C_CLANG_TIDY=/bin/clang-tidy;-checks=*,-clang-analyzer-*,-google-*,-hicpp-braces-around-statements,-bugprone-not-null-terminated-result,-readability-braces-around-statements,-readability-braces-around-statements* --format-style=../.clang-format -p ./compile_commands.json"
     - make all
 
+build_cppcheck:
+  stage: build
+  script:
+    - cd lib
+    - cppcheck --language=c . --enable=all --inconclusive --max-ctu-depth=64 -j 4
+
 build_centos:
   image: carvicsforth/centos_carv:latest
   stage: build
