--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,8 @@
 image: carvicsforth/arch_carv:latest
 variables:
     FF_GITLAB_REGISTRY_HELPER_IMAGE: 1
+    GIT_STRATEGY: clone
+    GIT_DEPTH: 0
 
 stages:
     - build
@@ -31,10 +33,10 @@ build_clang-tidy:
         - make all
 
 build_cppcheck:
-  stage: build
-  script:
-    - cd lib
-    - cppcheck --language=c . --enable=all --inconclusive --max-ctu-depth=64 -j 4
+    stage: build
+    script:
+        - cd lib
+        - cppcheck --language=c . --enable=all --inconclusive --max-ctu-depth=64 -j 4
 
 build_centos:
     image: carvicsforth/centos_carv:latest
